# ore-1

./: Dockerfile  README.md  compose.yml  export_package.sh  pyproject.toml  requirements.txt
app/: main.py  ore_logger.py  template.py
app/actions/: action.py  hello_action.py
app/controllers/: hello_controller.py
app/dispatchers/: http_dispatcher.py
app/model/: user_greeting.py
app/repositories/: hello_repository.py
app/router/: http_router.py
app/routers/: http_router.py
app/stores/: hello_store.py  store.py  user_store.py
app/templates/: error.jinja2.html  index.jinja2.html
db/ddl/: 202312192144_create_users copy.sql  202312192145_create_greetings.sql
